SONAR-4438 "More actions" drop list does not fit in the issue details modal window

--- a/sonar-server/src/main/webapp/stylesheets/style.css
+++ b/sonar-server/src/main/webapp/stylesheets/style.css
@@ -2116,7 +2116,7 @@ table.nowrap td, td.nowrap, th.nowrap {
   max-width: 220px;
   min-width: 160px;
   padding: 0;
-  position: absolute;
+  position: fixed;
   z-index: 1000;
 }
 
